--- a/Examples/TestBed/TestBed.csproj
+++ b/Examples/TestBed/TestBed.csproj
@@ -100,6 +100,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Tests\CCDTest.cs" />
+    <Compile Include="Tests\FrictionTest.cs" />
     <Compile Include="Tests\DistanceTest.cs">
       <SubType>Code</SubType>
     </Compile>
