--- a/Box2DX/Box2DX.csproj
+++ b/Box2DX/Box2DX.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Common\Vec3.cs" />
     <Compile Include="Common\XForm.cs" />
     <Compile Include="Dynamics\Body.cs" />
+    <Compile Include="Dynamics\BodyDef.cs" />
     <Compile Include="Dynamics\CircleDef.cs" />
     <Compile Include="Dynamics\ContactManager.cs" />
     <Compile Include="Dynamics\Contacts\CircleContact.cs" />
